2005-04-07 Braden McDaniel  <braden@endoframe.com>

	* README:  Added "Package directory layout" and "Usage"
	sections.

2005-03-31 Braden McDaniel  <braden@endoframe.com>

	Removed openvrml::node_class_ptr and openvrml::node_type_ptr
	typedefs.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/scope.cpp
	* src/libopenvrml/openvrml/scope.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/script.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2005-03-31 Braden McDaniel  <braden@endoframe.com>

	Removed openvrml::field_value_ptr typedef.  Such typedefs do
	little more than obfuscate the type of the smart pointer.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/Vrml97Parser.hpp
	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/field_value.h
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/script.h

2005-03-31 Braden McDaniel  <braden@endoframe.com>

	Refactored openvrml::scene::load to use
	openvrml::scene::get_resource.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h

2005-03-30 Braden McDaniel  <braden@endoframe.com>

	* doc/Makefile.am:  Updated dependency list.

2005-03-30 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.cpp:  Doc-comment improvements.

2005-03-28 Braden McDaniel  <braden@endoframe.com>

	Removed to_inline member function from
	openvrml::vrml97_node::inline_node.

	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2005-03-28 Braden McDaniel  <braden@endoframe.com>

	Added swap member function to openvrml::image along with a